crates/tui/tests/storybook/snapshots/app_dialog_permission::glob_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* glob **/*.rs in crates/tui/tests
  0 files





──────────────────────────────────────────────────────────────────────
 glob: **/*.rs in crates/tui/tests

 Allow?
  1. allow once
  2. deny
  3. allow glob for this session
  4. allow glob in ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
