crates/tui/tests/storybook/snapshots/app_dialog_permission::glob_permission_dialog.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 18
  0   0   1 fg=AnsiValue(208)
  0   1   5 attrs=dim
  1   2   7 attrs=dim
  7   0  70 fg=AnsiValue(208)
  8   1   4 fg=AnsiValue(208)
 10   1   6 attrs=dim
 11   0   1 bg=AnsiValue(237)
 11   1   1 fg=Black bg=White
 11   2   3 bg=AnsiValue(237) attrs=dim
 11   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 11  15  55 bg=AnsiValue(237)
 12   1   4 attrs=dim
 13   1   4 attrs=dim
 14   1   4 attrs=dim
 16   2  26 attrs=dim
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 17  10   1 bg=AnsiValue(233)
 17  11  18 fg=AnsiValue(208) bg=AnsiValue(233) attrs=bold
 17  29  35 bg=AnsiValue(233)
 17  64   6 fg=AnsiValue(244) bg=AnsiValue(233)
