crates/tui/tests/storybook/snapshots/app_dialog_permission::notebook_edit_permission_dialog_insert_cell.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 345
expression: frame.styles_text()
---
dim: 80 22
  7   0  80 fg=AnsiValue(208)
  8   1  13 fg=AnsiValue(208)
  9   0  80 fg=AnsiValue(244)
 10   1  20 attrs=dim
 11   1   3 fg=AnsiValue(244)
 11   6   6 fg=Rgb { r: 249, g: 38, b: 114 }
 11  12   7 fg=Rgb { r: 248, g: 248, b: 242 }
 11  19   2 fg=Rgb { r: 249, g: 38, b: 114 }
 11  21   3 fg=Rgb { r: 248, g: 248, b: 242 }
 12   1   3 fg=AnsiValue(244)
 12   6   2 fg=Rgb { r: 248, g: 248, b: 242 }
 12   8   1 fg=Rgb { r: 249, g: 38, b: 114 }
 12   9  11 fg=Rgb { r: 248, g: 248, b: 242 }
 12  20   2 fg=Rgb { r: 190, g: 132, b: 255 }
 12  22   1 fg=Rgb { r: 248, g: 248, b: 242 }
 13   0  80 fg=AnsiValue(244)
 14   1   6 attrs=dim
 15   0   1 bg=AnsiValue(237)
 15   1   1 fg=Black bg=White
 15   2   3 bg=AnsiValue(237) attrs=dim
 15   5   3 fg=AnsiValue(208) bg=AnsiValue(237)
 15   8  72 bg=AnsiValue(237)
 16   1   4 attrs=dim
 17   1   4 attrs=dim
 18   1   4 attrs=dim
 20   2  26 attrs=dim
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(233)
 21  10  64 bg=AnsiValue(233)
 21  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
