crates/tui/tests/storybook/snapshots/app_dialog_permission::notebook_edit_permission_dialog_with_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 384
expression: frame.text()
---









────────────────────────────────────────────────────────────────────────────────
 edit_notebook: analysis.ipynb
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 replace cell 1 [code] id=load
   1   import pandas as pd
   2   df = pd.read_csv('data.csv')
   3 + print(df.head())
   4         "metadata": {},
   5         "cells": [
   6           { "cell_type": "markdown", "id": "intro",
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. yes
  2. no
  3. always allow
  4. always allow in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
